cs352/proj3/tests/syntax/invalid/5.js
<script type="text/JavaScript">
while(1{
	var a = 2;
}
</script>
